3.0.4 (09/07/2021)
- FIX: dict_merge expanded list at each call (now it just replaces it)

3.0.3 (08/07/2021)
- FIX: resolving pymethod during foreach statement was bugged (result was duplicated)

3.0.2 (1/07/21)
- FIX: 'wait' command was really buged in a proc statement ;-)

3.0.1 (30/06/21)
- FIX: 'wait' command was buged in a proc statement

3.0.0 (17/06/21)
- perhaps you should avoid to use this, and use next versions (release fix)
- a lot of changes ... so a lot of bugs (see alpha changes)
  btw all my legacy tests works (at 99%) ... but pretty sure that exists some nails to fix.
- major evols: --f, --j, wait command, ignorable vars ... and lot of fixes (to be as strong as v2 versions)
- better base/core : futures versions will use git in the right way (and it will be easily to maintain ;-)

ALPHA 3.0.0a6 (new core system) : near ;-)
- FIX: bug when executing pymethods in tests
- EVOL: new option --j & --j:name.xml to output junit xml file (jenkins/bamboo can read/interpret junit files)
- new unit tests

ALPHA 3.0.0a5 (new core system) : near ;-)
- EVOL: assuming that "save order is important" : so "save" statement can be a dict OR (newly) a list!

ALPHA 3.0.0a4 (new core system) : should be the good one !
- FIX: event_loop/py38 on windows (Configuration of windows event loop for libraries)
- FIX: save order is important

ALPHA 3.0.0a3 (new core system)
- FIX: 'int'.size was wrong
- FIX: match identical request in dual mode (was wrong)

ALPHA 3.0.0a2 (new core system)
- back to aiohttp (with aio cookies) (httpx doesn't support SOCKS PROXY (which is a nogo)) ;-(
- bad if statements fails silently

ALPHA 3.0.0a1 (new core system)
- now, it's a real module (a folder in site-packages)
- now, the version is real semver
- new command (wait: <<time_in_ms>>)
- remove SELFCONF (too overbloated and not useful)
- ~~use HTTPX again and forever ;-) (bye aiohttp)~~
- "proxy" support too ~~(can be really configurable, see proxies/httpx)~~